[gd_scene load_steps=6 format=3 uid="uid://cpyflcuucq0h1"]

[ext_resource type="Script" uid="uid://cchmjwc23s8xn" path="res://scenes/player.gd" id="1_3vyb7"]

[sub_resource type="Gradient" id="Gradient_u8vuu"]
offsets = PackedFloat32Array(0.9066667, 0.91)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3vyb7"]
gradient = SubResource("Gradient_u8vuu")
fill_to = Vector2(0, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2els"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3vyb7"]
size = Vector2(64, 64)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_3vyb7")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_3vyb7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_g2els")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.8
autostart = true

[node name="DamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource("RectangleShape2D_3vyb7")

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
[connection signal="body_exited" from="DamageArea" to="." method="_on_damage_area_body_exited"]
